[package]
name = "summer-boot-autoconfigure"
version = "0.1.2"
rust-version = "1.60.0"
edition = "2021"
description = "summer boot autoconfigure"
authors = [
    "James Zow <Jameszow@163.com>"
]
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0.75"
schemars = "0.8.8"

#file
toml = "0.5"