[package]
name = "summer-boot-autoconfigure"
version = "1.4.1"
rust-version = "1.73.0"
edition = "2021"
description = "summer boot autoconfigure"
authors = [
    "James Zow <Jameszow@163.com>",
    "Xinyu Gao <barrybivinsxinyu@gmail.com>",
    "WanSen AI Team <team@wansenai.com>"
]
license = "Apache-2.0"
readme = "README.md"
keywords = ["middleware", "autoconfigure", "summer"]
documentation = "https://github.com/wansenai/summer-boot#readme"
repository = "https://github.com/wansenai/summer-boot"
homepage = "https://crates.io/crates/summer-boot"


[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0.75"
schemars = "0.8.8"

#file
toml = "0.8"
