[package]
name = "summer-boot-macro"
version = "1.4.0"
rust-version = "1.60.0"
edition = "2021"
description = "summer boot macro"
license = "Apache-2.0"
authors = [
    "James Zow <Jameszow@163.com>",
    "Yangandmore <635408602@qq.com>",
    "Summeros Team <team@summeros.org>"
]
readme = "README.md"
documentation = "https://github.com/summer-os/summer-boot/blob/master/summer-boot-macro/README.md"
repository = "https://github.com/summer-os/summer-boot"
homepage = "https://summeros.io/"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1.0", features = ["full"] }
toml = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
summer-boot-autoconfigure = { version = "1.4", path = "../summer-boot-autoconfigure"}

[dev-dependencies]
summer-boot = { version = "1.4", path = "../summer-boot" }
