[package]
name = "summer-boot"
version = "1.3.0"
rust-version = "1.60.0"
edition = "2021"
description = "summer boot"
authors = [
    "James Zow <Jameszow@163.com>",
    "Summeros Team <team@summeros.org>"
]
license = "Apache-2.0"
readme = "README.md"
keywords = ["tcp", "http", "web2", "web3", "summer"]
documentation = "https://github.com/summer-os/summer-boot#readme"
repository = "https://github.com/summer-os/summer-boot"
homepage = "https://summeros.io/"

[features]
default = ["macros", "async-h1"]
macros = [
    "summer-boot-macro"
]
unstable = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"]}
routefinder = "0.5.0"

#async
async-std = { version = "1.8.0", features = ["attributes"] }
async-trait = "0.1.41"
async-channel = "1.5.1"
async-dup = "1.2.2"
async-h1 = { version = "2.3.0", optional = true }

#pin
pin-project = "1.0.2"
pin-project-lite = "0.2.4"

# http middleware
http-types = { version = "2.11.0"}
httparse = "1.6"
futures-util = "0.3.6"


# summer dependencies
summer-boot-macro = { version = "1.3" , optional = true, path = "../summer-boot-macro"}

#log
femme = { version = "2.1.1"}
kv-log-macro = "1.0.7"
log = { version = "0.4.13", features = ["kv_unstable_std"] }


[dev-dependencies]
async-std = { version = "1.6.5", feature = ["unstable", "attributes"]}