[package]
name = "summer-boot"
version = "1.4.2"
rust-version = "1.73.0"
edition = "2021"
description = "summer boot"
authors = [
    "James Zow <Jameszow@163.com>",
    "WanSen AI Team <team@wansenai.com>"
]
license = "Apache-2.0"
readme = "README.md"
keywords = ["tcp", "http", "web", "summer"]
documentation = "https://github.com/wansenai/summer-boot#readme"
repository = "https://github.com/wansenai/summer-boot"
homepage = "https://crates.io/crates/summer-boot"

[features]
default = ["macros"]
macros = [
    "summer-boot-macro"
]
unstable = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"]}
routefinder = "0.5.0"

#async
async-std = { version = "1.8.0", features = ["attributes"] }
async-trait = "0.1.41"
async-channel = "2.2.0"
async-dup = "1.2.2"

#pin
pin-project = "1.0.2"
pin-project-lite = "0.2.4"

# http middleware
http-types = { version = "2.11.0"}
httparse = "1.6"
futures-util = "0.3.6"


# summer dependencies
summer-boot-macro = { version = "1.4.1" , optional = true, path = "../summer-boot-macro"}

#log
femme = { version = "2.1.1"}
kv-log-macro = "1.0.7"
log = { version = "0.4.13", features = ["kv_unstable_std"] }